--- a/nd-portfolio/src/app/login/login.component.html
+++ b/nd-portfolio/src/app/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+  <div>
+    <label for="email">Email</label>
+    <input type="email" id="email" formControlName="email" />
+  </div>
+  <br />
+  <div>
+    <label for="password">Password</label>
+    <input type="password" id="password" formControlName="password" />
+  </div>
+  <br />
+  <div>
+    <button type="submit" [disabled]="!form.valid">Login</button>
+  </div>
+</form>
