--- a/nd-portfolio/src/styles.css
+++ b/nd-portfolio/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    font-family: sans-serif;
+}
+
+header img{
+    margin-top: 10px;
+    border-radius: 20px 20px 0 0;
+}
+.nav-item{
+    margin:0 3px;
+    font-size: 20px;
+}
+#datos{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: -75px;
+    padding: 10px;
+}
+#datos img{
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+#datos .row{
+    align-items: center;
+}
+#datos .row .col-nth-child-2{
+    text-align: right;
+}
+#datos h4{
+    text-align: right;
+}
